compiler/testData/diagnostics/tests/valueClasses/kt57527.kt
// FIR_IDENTICAL
// WITH_STDLIB

@JvmInline
value class R(<!SYNTAX!>throw<!> <!SYNTAX!>[<!><!SYNTAX!><!>FileSystemException<!SYNTAX!><!>,  FileSystemException<!SYNTAX!>]<!>)
